<resources>
    <string name="app_name">EventApplication</string>
    <string name="login_password">Login Password</string>
    <string name="login_name">Login Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enable_sms_notifications_for_events">Enable SMS Notifications for events</string>
    <string name="be_notified_when_user_joins">Be notified when user joins</string>
    <string name="to_send_automated_event_notifications_via_sms_we_need_your_permission_to_access_sms_features">To send automated event notifications via SMS, we need your permission to access SMS features.</string>
    <string name="event_application">Event Application</string>
</resources>