<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background = "@color/colorPrimary">
    <!-- App Bar at top of screen-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"

        android:elevation="4dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_application"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>
    <CheckBox android:id="@+id/checkbox_SMS_Notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_sms_notifications_for_events"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:layout_gravity="center"/>
    <CheckBox android:id="@+id/checkbox_user_joins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/be_notified_when_user_joins"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_send_automated_event_notifications_via_sms_we_need_your_permission_to_access_sms_features"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="16dp" />

</LinearLayout>